fixed mobile issue with navbar covering h1.

--- a/styles.css
+++ b/styles.css
@@ -196,4 +196,8 @@ p {
   .stages {
     flex-direction: column;
   }
+
+  nav h1 {
+    font-size: 24px;
+  }
 }
